--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-EMAIL_USER = ''
-EMAIL_PASS = ''
+EMAIL_USER = 'codingshehan@gmail.com'
+EMAIL_PASS = 'pyea ihbc kqnb xoie'
 MONGO_URL = 'mongodb+srv://sehandeveloper:GpGeUDiy11QAxqeJ@cluster0.s5hyu.mongodb.net/'
